<resources>
    <string name="app_name">Student Management</string>
    <string name="preference_login_key">com.example.ex1.PREFERENCE_LOGIN_KEY</string>
    <string name="preference_file_key">com.example.studentmanagement.PREFERENCE_FILE_KEY</string>
    <string name="saved_account_uid_key">accountUID</string>
    <string name="saved_role_key">role</string>
    <string name="hint1"><i>Email</i></string>
    <string name="hint2"><i>Password</i></string>
    <string name="hint3"><i>Name</i></string>
    <string name="hint4"><i>Age</i></string>
    <string name="hint5"><i>Phone Number</i></string>
    <string-array name="degree">
        <item>-- Chọn bằng cấp--</item>
        <item>Kĩ sư</item>
        <item>Cử nhân</item>
        <item>Tiến sĩ</item>
        <item>Thạc sĩ</item>
        <item>Giáo sư</item>
    </string-array>
    <string-array name="faculty">
        <item>-- Chọn khoa --</item>
        <item>Công Nghệ Thông Tin</item>
        <item>Kĩ Thuật Công Trình</item>
        <item>Mỹ thuật công nghiệp</item>
        <item>Dược</item>
        <item>Khoa Học Ứng Dụng</item>
        <item>Luật</item>
        <item>Tài Chính Ngân Hàng</item>
        <item>Ngôn Ngữ Anh</item>
        <item>Quản Trị Kinh Doanh</item>
        <item>Kinh Tế</item>
        <item>Điện - Điện Tử</item>
        <item>Toán - Thống kê</item>
    </string-array>
    <string name="search_hint">Tìm kiếm sinh viên</string>
    <string name="filter_label">Lọc Theo</string>
    <string name="sort_order_toggle">Toggle sort order</string>

    <string-array name="sort_options">
        <item>MSSV (Tăng dần)</item>
        <item>MSSV (Giảm dần)</item>
        <item>Tên (A-Z)</item>
        <item>Tên (Z-A)</item>
        <item>Khoa</item>
    </string-array>
</resources>